--- a/ansible/roles/init/tasks/main.yml
+++ b/ansible/roles/init/tasks/main.yml
@@ -10,8 +10,9 @@
     - curl
     - wget
     - vim
-    - imagemagick
+    #- imagemagick
     - python-software-properties
+    - python-pip
 
 - name: Add ppa Repository
   sudo: yes
