--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -11,16 +11,17 @@
     - vars/common.yml
     - vars/nginxphp.yml
     - vars/ws_defaults.yml
+    - vars/mongodb.yml
   roles:
     - init
     - nginx
-    - php5-cli
+    #- php5-cli
     #- php5-fpm
     #- phpcommon
     #- php-pecl
     #- nodejs
-    #- mongodb
+    - mongodb
     #- composer
-    - mysql
-    - pgsql
-    - app
+    #- mysql
+    #- pgsql
+    #- app
