updates to playbooks

--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -1,2 +1,7 @@
 ---
-# application tasks to be customized and to run after the main provision
+
+- name: App | Setting Folder Permissions
+  command: chmod -R 755 /vagrant/app/storage
+
+- name: App | Composer install
+  command: composer install chdir=/vagrant
