--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -15,13 +15,14 @@
   roles:
     - init
     - nginx
-    #- php5-cli
-    #- php5-fpm
-    #- phpcommon
-    #- php-pecl
+    - php5-cli
+    - php5-fpm
+    - phpcommon
+    - php-pecl
     #- nodejs
-    - mongodb
-    #- composer
+    # - mongodb
+    - composer
     #- mysql
     #- pgsql
-    #- app
+    - app
+    #- yo
