adding elasticsearch from github.com/geerlingguy/ansible-role-elasticsearch

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -17,12 +17,13 @@
   roles:
     - init
     - nginx
-    - java
-    - solr
-    # - php5-cli
-    # - php5-fpm
-    # - phpcommon
-    # - php-pecl
+    # - java
+    # - solr
+    # - elasticsearch
+    - php5-cli
+    - php5-fpm
+    - phpcommon
+    - php-pecl
     # - nodejs
     # - mongodb
     # - composer
