--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -5,3 +5,10 @@
 
 - name: App | Composer install
   command: composer install chdir={{ app.laravel_install_dir }}
+  
+- name: App | Create copy of .env file
+  command: cp .env.example .env chdir={{ app.laravel_install_dir }}
+
+- name: App | Create laravel jey
+  command: 'php /vagrant/artisan key:generate'   
+  
