--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -17,13 +17,15 @@
   roles:
     - init
     - nginx
-    # - java
+    - git
+    - java
+    - maven
     # - solr
     # - elasticsearch
-    - php5-cli
-    - php5-fpm
-    - phpcommon
-    - php-pecl
+    # - php5-cli
+    # - php5-fpm
+    # - phpcommon
+    #-  php-pecl
     # - nodejs
     # - mongodb
     # - composer
