--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -1,17 +1,13 @@
 ---
 
-# - name: App | Setting Folder Permissions
-#   command: chmod -R 755 {{ app.laravel_storage }}
+- name: App | Setting Folder Permissions
+  command: chmod -R 755 {{ app.laravel_storage }}
 
-# - name: App | Composer install
-#   command: composer install chdir={{ app.laravel_install_dir }}
-  
-# - name: App | Create copy of .env file
-#   command: cp .env.example .env chdir={{ app.laravel_install_dir }}
+- name: App | Composer install
+  command: composer install chdir={{ app.laravel_install_dir }}
 
-# - name: App | Create laravel jey
-#   command: 'php /vagrant/artisan key:generate'   
-  
+- name: App | Create copy of .env file
+  command: cp .env.example .env chdir={{ app.laravel_install_dir }}
 
-# Example read-write git checkout from github
-- git: repo=ssh://git@github.com:glenrobson/SimpleAnnotationServer.git dest=/vagrant/app
+- name: App | Create laravel jey
+  command: 'php /vagrant/artisan key:generate'
