update to yeoman

--- a/ansible/roles/nodejs/tasks/main.yml
+++ b/ansible/roles/nodejs/tasks/main.yml
@@ -31,3 +31,6 @@
     - generator-karma
     - generator-angular
     - generator-webapp
+    - time-grunt
+- command: npm install --save-dev grunt-wiredep
+
